[project]
name = "fastmcp-map-app"
version = "0.1.0"
description = "FastAPI application with chat interface and OpenLayers map"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []

[tool.uv]
package = false